<resources>
    <string name="app_name">konselorku</string>
    <string name="menu_dashboard">Berita</string>
    <string name="menu_guru">Guru</string>
    <string name="menu_lapor">Lapor</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_porfil">Profil</string>
    <string name="notification">Notifikasi</string>
    <string name="settings">Pengaturan</string>
    <string name="intro_1">Bekerjasama dengan konselor dari berbagai sekolah dan instansi di Indonesia</string>
    <string name="intro_title_1">Nikmati Layanan Konseling Terbaik</string>
    <string name="intro_title_2">Gratis Konseling</string>
    <string name="intro_2">Dengan guru bimbingan konseling di sekolah anda</string>
    <string name="intro_title_3">Pilih Konselor</string>
    <string name="intro_3">Dengan bebasnya konselor akan membuat anda lebih nyaman dan aman dalam berkonseling</string>
    <string name="intro_title_4">Lapor Cepat</string>
    <string name="intro_4">Stop tindakan bulying, kamu dapat melaporkan tindakan bulying kepada BK sekolah dengan mudah</string>
    <string name="intro_title_5">Berkonseling dan Rasakan Manfaatnya</string>
    <string name="intro_5">Jika anda memiliki masalah sebaiknya segera berkonseling supaya perasaan lega dan anda akan menjadi lebih baik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_up">DAFTAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="finish_title">Selamat Datang!</string>
    <string name="finish_subtitle">Yuk lengkapi data kamu!</string>
</resources>
